argocd/gateway/routes/filebrowser-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: filebrowser-route
  namespace: media
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  hostnames:
    - file.hometheo.click
  parentRefs:
    - name: main-gateway
      namespace: default
      sectionName: https
  rules:
    - backendRefs:
        - name: filebrowser
          port: 8080
