argocd/gateway/routes/grafana-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  hostnames:
    - grafana.hometheo.click
  parentRefs:
    - name: main-gateway
      namespace: default
      sectionName: https
  rules:
    - backendRefs:
        - name: prometheus-stack-grafana
          port: 80
