argocd/gateway/routes/jellyfin-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-route
  namespace: media
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  hostnames:
    - jellyfin.hometheo.click
  parentRefs:
    - name: main-gateway
      namespace: default
      sectionName: https
  rules:
    - backendRefs:
        - name: jellyfin
          port: 8096
