argocd/gateway/routes/linkwarden-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linkwarden-route
  namespace: linkwarden
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  hostnames:
    - link.hometheo.click
  parentRefs:
    - name: main-gateway
      namespace: default
      sectionName: https
  rules:
    - backendRefs:
        - name: linkwarden
          port: 80
