argocd/gateway/routes/opengym-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opengym-route
  namespace: opengym
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  hostnames:
    - opengym.hometheo.click
  parentRefs:
    - name: main-gateway
      namespace: default
      sectionName: https
  rules:
    - backendRefs:
        - name: opengym
          port: 80
