argocd/gateway/routes/qbittorrent-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: torrent-route
  namespace: media
  annotations:
    argocd.argoproj.io/sync-wave: "2"
    gethomepage.dev/href: "https://torrent.hometheo.click"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Torrent
    gethomepage.dev/group: Media
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/homarr-labs/dashboard-icons/svg/qbittorrent.svg"
    gethomepage.dev/name: QbitTorrent
    gethomepage.dev/pod-selector: ""
spec:
  hostnames:
    - torrent.hometheo.click
  parentRefs:
    - name: main-gateway
      namespace: default
      sectionName: https
  rules:
    - backendRefs:
        - name: media-qbittorrent
          port: 8080
