argocd/gateway/routes/sonarr-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr-route
  namespace: media
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  hostnames:
    - sonarr.hometheo.click
  parentRefs:
    - name: main-gateway
      namespace: default
      sectionName: https
  rules:
    - backendRefs:
        - name: media-sonarr
          port: 8989
