argocd/gateway/routes/uptime-kuma.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptime-kuma-route
  namespace: uptime-kuma
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  hostnames:
    - uptime.hometheo.click
  parentRefs:
    - name: main-gateway
      namespace: default
      sectionName: https
  rules:
    - backendRefs:
        - name: uptime-kuma
          port: 3001
